Se creo el crud de turnos, usuarios, sucursales y horarios

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,13 @@
 <% if usuario_signed_in? %>
 <p>pruieba de nombre <%= current_usuario.nombre %></p>
 <% end %>
-<a href="http://127.0.0.1:3000/usuarios/">
+
+<a href="http://127.0.0.1:3000/turnos/">
+   <button>Ver Turnos</button>
+</a>
+<a href="http://127.0.0.1:3000/users/">
    <button>Ver Usuarios</button>
+</a>
+<a href="http://127.0.0.1:3000/sucursales/">
+   <button>Ver Sucursales</button>
 </a>
