--- a/app/views/turnos/new.html.erb
+++ b/app/views/turnos/new.html.erb
@@ -21,7 +21,7 @@
 
     <div>
         <%= form.label :estado %>
-        <%= form.check_box :estado%>
+        <%= form.text_field :estado%>
     </div>
 
     <%= form.submit %>
