--- a/app/views/horarios/new.html.erb
+++ b/app/views/horarios/new.html.erb
@@ -1,7 +1,7 @@
 <h2>Agregar un nuevo horario para la sucursal numero <%= @sucursal_id %></h2>
 
 
-<%= form_with model: @horarios do |form| %>
+<%= form_with model: @horario do |form| %>
 
     <div>
         <%= form.label :Dia %>
@@ -10,12 +10,12 @@
 
     <div>
         <%= form.label :hora_inicio %>
-        <%= form.time_field :hora_inicio%>
+        <%= form.time_field :hora_inicio %>
     </div>
     
     <div>
         <%= form.label :hora_fin %>
-        <%= form.time_field :hora_fin%>
+        <%= form.time_field :hora_fin %>
     </div>
 
     <%= form.hidden_field :sucursal_id, value: @sucursal_id %>
