--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -1,6 +1,5 @@
-<%= link_to 'Añadir un turno', new_turno_path %>
 <h1>Turnos:</h1>
-<table>
+<table class="table table-striped table-bordered table-hover">
   <tr>
     <th>Fecha</th>
     <th>Hora</th>
