--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,10 @@
 
 
         <li class="nav-item">
+        <%= link_to edit_usuario_registration_path, class: "nav-link"  do %>
             <i class="fas fa-fw fa-tags"></i>
             <span>Editar mi perfil</span>
+            <%end%>
         </li>
 
         <li class="nav-item">
