--- a/app/views/sucursales/index.html.erb
+++ b/app/views/sucursales/index.html.erb
@@ -1,6 +1,6 @@
-<%= link_to 'Añadir una sucursal', new_sucursal_path %>
+<button type="button" class="btn btn-outline-dark"><%= link_to 'Añadir una sucursal', new_sucursal_path %></button>
 <h1>Sucursales:</h1>
-<table>
+<table class="table table-striped table-bordered table-hover">
   <tr>
     <th>Nombre</th>
     <th>Direccion</th>
@@ -16,17 +16,23 @@
     <td> <%= su.telefono %> </td>
     <td>
     <%= link_to sucursals_path(su.id) do %>
+      <button type="button" class="btn btn-secondary"> 
         <span>Ver sucursal</span>
+      </button> 
     <%end%>
     </td>
     <td>
     <%= link_to new_horario_path(su.id) do %>
+      <button type="button" class="btn btn-primary"> 
         <span>Agregar horario</span>
+      </button> 
     <%end%>
     </td>
     <td>
     <%= link_to horario_path(su.id) do %>
+      <button type="button" class="btn btn-primary"> 
         <span>Ver horarios de la sucursal</span>
+      </button>
     <%end%>
     </td>
     </tr>
