--- a/app/views/sucursales/new.html.erb
+++ b/app/views/sucursales/new.html.erb
@@ -1,19 +1,20 @@
+<button type="button" class="btn btn-outline-dark"><%= link_to 'Volver al listado', sucursales_path %></button>
 <h2>Agregar una nueva Sucursal</h2>
 
 
 <%= form_with model: @sucursales do |form| %>
 
-    <div>
+    <div class="form-group">
         <%= form.label :nombre %>
         <%= form.text_field :nombre%>
     </div>
 
-    <div>
+    <div class="form-group">
         <%= form.label :direccion %>
         <%= form.text_field :direccion%>
     </div>
     
-    <div>
+    <div class="form-group">
         <%= form.label :telefono %>
         <%= form.number_field :telefono%>
     </div>
