--- a/app/views/turnos/new.html.erb
+++ b/app/views/turnos/new.html.erb
@@ -1,31 +1,45 @@
-<h2>Agregar un nuevo Turno</h2>
+<h1>Estos son los dias y horarios de atencion de la sucursal <%= @sucursal.nombre%></h1>
 
-<%= link_to 'Volver al listado de turno', turnos_path %>
+<table class="table table-striped table-bordered table-hover">
+  <tr>
+    <th>Dia</th>
+    <th>Hora de inicio</th>
+    <th>Hora de fin</th>
+  </tr>
+  <% @sucursal.horario.each do |ho| %>
+    <tr>
+    <td> <%= ho.dia %> </td>
+    <td> <%= ho.hora_inicio.strftime("%H:%M")  %> </td>
+    <td> <%= ho.hora_fin.strftime("%H:%M")  %> </td>
+    <td>
+    </tr>
+  <%end%>
+  
+</table> 
 
+<% if current_usuario.role != "Cliente"%>
+<button type="button" class="btn btn-outline-dark"><%= link_to 'Volver al listado de turno', turnos_path %></button>
+<%end%>
+<h2>Agende un nuevo Turno</h2>
 <%= form_with model: @turno do |form| %>
-
-    <div>
-        <%= form.label :sucursal %>
-        <%= form.select "sucursal", @sucursales.map{ |su| ["#{su.nombre}", su.id] }, :multiple => true %>
-    </div>
     
-    <div>
-        <%= form.hidden_field :cliente_id, value: @cliente_id%>
-    </div>
 
-    <div>
+    <div class="form-group">
         <%= form.label :fecha %>
         <%= form.date_field :fecha%>
     </div>
 
-    <div>
+    <div class="form-group">
         <%= form.label :hora %>
         <%= form.time_field :hora%>
     </div>
     
-    <div>
+    <div class="form-group">
         <%= form.label :motivo %>
         <%= form.text_field :motivo%>
+    </div>
+    <div>
+        <%= form.hidden_field :sucursal_id, value: @sucursal.id%>
     </div>
 
     <div>
