--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<button type="button" class="btn btn-outline-dark"><%= link_to 'Añadir un nuevo usuario', new_usuario_path %></button>
+<button type="button" class="btn btn-outline-dark"><%= link_to 'Añadir un nuevo administrador',  new_usuario_path(admin: true)  %></button>
+<button type="button" class="btn btn-outline-dark"><%= link_to 'Añadir un nuevo personal bancario',  new_usuario_path(admin: false)  %></button>
 <h1>Usuarios:</h1>
 <table class="table table-striped table-bordered table-hover">
   <tr>
@@ -16,17 +17,17 @@
     <td>
     
     <%= link_to usuario_path(usu.id) do %>
-    <button type="button" class="btn btn-secondary"> 
+      <button type="button" class="btn btn-secondary"> 
         <span>Ver usuario</span>
-        </button>
+      </button>
     <%end%>
     
     </td>
     <td>
     <%= link_to edit_usuario_path(usu.id) do %>
-    <button type="button" class="btn btn-primary">
+      <button type="button" class="btn btn-primary">
         <span>Editar usuario</span>
-    </button>    
+      </button>    
     <%end%>
     </td>
   </tr>
