--- a/app/views/horarios/show.html.erb
+++ b/app/views/horarios/show.html.erb
@@ -3,20 +3,35 @@
 <% else %>
   <button type="button" class="btn btn-outline-dark"><%= link_to 'Volver al listado', sucursales_path %></button>
 <% end %>
-<h1>Detalles de los horarios de la sucursal:  <%= @sucursal.nombre %></h1>
-<table class="table table-striped table-bordered table-hover">
-  <tr>
-    <th>Dia</th>
-    <th>Hora de inicio</th>
-    <th>Hora de fin</th>
-  </tr>
-  <% @horario.each do |ho| %>
+
+<% if @horario.empty?%>
+  <h3>La sucursal <%= @sucursal.nombre %> no posee horarios</h3>
+<% else %>
+  <h1>Detalles de los horarios de la sucursal:  <%= @sucursal.nombre %></h1>
+  <table class="table table-striped table-bordered table-hover">
     <tr>
-    <td> <%= ho.dia %> </td>
-    <td> <%= ho.hora_inicio.strftime("%H:%M")  %> </td>
-    <td> <%= ho.hora_fin.strftime("%H:%M")  %> </td>
-    <td>
+      <th>Dia</th>
+      <th>Hora de inicio</th>
+      <th>Hora de fin</th>
+      <% if current_usuario.role == "Administrador"%>
+        <th>Editar horario</th>
+      <% end %>
     </tr>
-  <%end%>
-  
-</table> 
+    <% @horario.each do |ho| %>
+      <tr>
+      <td> <%= ho.dia %> </td>
+      <td> <%= ho.hora_inicio.strftime("%H:%M")  %> </td>
+      <td> <%= ho.hora_fin.strftime("%H:%M")  %> </td>
+      <% if current_usuario.role == "Administrador"%>
+        <td>
+          <%= link_to edit_horario_path(ho.id) do %>
+            <button type="button" class="btn btn-primary"> 
+              <span>Editar horario</span>
+            </button>
+          <%end%>
+        </td>
+      <%end%>
+      </tr>
+    <%end%>
+  </table> 
+<% end %>
