Terminamos la entrega, solo falta permisos de rutas.

--- a/app/views/horarios/edit.html.erb
+++ b/app/views/horarios/edit.html.erb
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-outline-dark"><%= link_to 'Volver al listado', sucursales_path %></button>
+<button type="button" class="btn btn-outline-dark"><%= link_to 'Volver al listado', sucursals_path %></button>
 <h2>Editar Horario </h2>
 <%= form_with model: @horario do |form| %>
 
