--- a/app/views/sucursals/index.html.erb
+++ b/app/views/sucursals/index.html.erb
@@ -1,4 +1,4 @@
-<% if current_usuario.role == "Administrador"%>
+<% if can? :create, Sucursal%>
   <button type="button" class="btn btn-outline-dark"><%= link_to 'Añadir una sucursal', new_sucursal_path %></button>
 <% end %>
 <h1>Sucursales:</h1>
