--- a/app/views/sucursals/index.html.erb
+++ b/app/views/sucursals/index.html.erb
@@ -29,7 +29,7 @@
     <%end%>
     </td>
     <td>
-    <%= link_to horario_path(su.id) do %>
+    <%= link_to horarios_path(su.id) do %>
       <button type="button" class="btn btn-primary"> 
         <span>Ver horarios de la sucursal</span>
       </button>
