--- a/app/views/sucursals/index_turno.html.erb
+++ b/app/views/sucursals/index_turno.html.erb
@@ -15,7 +15,7 @@
     <td> <%= su.direccion %> </td>
     <td> <%= su.telefono %> </td>
     <td>
-    <%= link_to horario_path(su.id) do %>
+    <%= link_to horarios_path(su.id) do %>
       <button type="button" class="btn btn-primary"> 
         <span>Ver horarios de la sucursal</span>
       </button>
